# ros2-warehouse-robot

./: frames_2025-04-03_21.58.01.gv
gz_ros2_control_ws/gz_ros2_control_ws/install/: local_setup.sh  setup.ps1
gz_ros2_control_ws/install/: setup.sh
install/color_detection/lib/color_detection/: color_detector
install/color_detection/share/color_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_msgs/share/control_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/control_toolbox/include/control_toolbox/: exponential_filter_parameters.hpp  low_pass_filter_parameters.hpp  rate_limiter_parameters.hpp
install/control_toolbox/share/control_toolbox/: control_filters.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/controller_manager/test/: test_ros2_control_node.yaml
install/warehouse_sim/share/warehouse_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_sim/share/warehouse_sim/launch/: warehouse_full_slam.launch.py  warehouse_launch.py
install/warehouse_sim/share/warehouse_sim/urdf/: tugbot.urdf
log/: latest_build
src/color_detection/: package.xml  setup.py
src/warehouse_sim/: setup.cfg  setup.py  setup.py.save
src/warehouse_sim/config/: tugbot_control.yaml
src/warehouse_sim/launch/: warehouse_slam.launch.py
src/warehouse_sim/urdf/: tugbot.sdf  tugbot_tf.urdf
src/warehouse_sim/worlds/: warehouse_world.sdf
(+1210 files in other folders)
